countdowns overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 body {
   align-items: center;
   background-color: var(--background-color);
-  background-image: url(/img/bg.jpg);
+  background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: var(--font-color);
@@ -107,7 +107,7 @@ button.countdown-delete img {
   text-align: center;
   width: 90%;
   max-height: 60vh;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .countdown {
